--- a/assets/css/buttons.css
+++ b/assets/css/buttons.css
@@ -6,6 +6,7 @@
 		transparent 50%
 	);
 	--secondary-color: #ff00e5;
+	--tertiary-color: #b535f6;
 }
 
 .menu__button {
@@ -62,7 +63,7 @@
 	filter: brightness(4);
 }
 
-.button__gradient {
+.button--gradient {
 	padding: 1.6rem 4rem;
 
 	background: var(--btn-bg-color-gradient);
@@ -75,19 +76,19 @@
 	transition: background 0.6s ease-in-out, outline 0.6s ease-in-out, transform 0.6s ease-in-out;
 }
 
-.button__gradient h3 {
+.button--gradient h3 {
 	font-size: calc(1.4rem + 0.1vw);
 	text-transform: uppercase;
 	text-align: center;
 	letter-spacing: 0.3rem;
 }
 
-.button__gradient--wiggle {
+.button--gradient--wiggle {
 	animation: wiggle 2s linear infinite forwards 2s;
 }
 
-.button__gradient:hover {
-	background-position: -30rem;
+.button--gradient:hover {
+	background-position: -1rem;
 	outline: 0.2rem solid var(--secondary-color);
 }
 
@@ -120,3 +121,12 @@
 		transform: rotate(0deg);
 	}
 }
+
+header .button--gradient:hover {
+	background-position: -18vmax;
+}
+
+main .button--gradient:hover {
+	background-position: -30vmax;
+}
+
