--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -5,7 +5,7 @@ nav.menu {
 
 	position: fixed;
 	top: 0;
-	z-index: 1;
+	z-index: 2;
 
 	display: flex;
 	justify-content: space-between;
@@ -15,8 +15,8 @@ nav.menu {
 }
 
 .menu__logo img {
-	min-width: 13rem;
-	max-width: 18rem;
+	width: 16rem;
+	min-width: 12rem;
 }
 
 @media screen and (max-width: 480px) {
