--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,14 +2,18 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;700&display=swap");
 
 @import url(buttons.css);
+@import url(variables.css);
 @import url(nav.css);
 @import url(footer.css);
 @import url(header.css);
 @import url(main.css);
 
+/* corrigir paddings e margins */
+
 :root {
 	font-size: 62.5%;
 	box-sizing: border-box;
+	scroll-behavior: smooth;
 
 	--primary-color: #020228;
 	--secondary-color: #ff00e5;
@@ -21,13 +25,6 @@
 	--nav-bg-color: rgba(0, 0, 0, 0.3);
 	--text-color: #fff;
 	--link-color: #9e86ff;
-	--form-bg-color: rgba(211, 211, 211, 0.06);
-	--form-field-bg-color: rgba(0, 0, 0, 0.2);
-	--form-field-border: 1px solid rgba(255, 255, 255, 0.7);
-	--form-field-placeholder: rgba(255, 255, 255, 0.7);
-	--form-field-error: rgb(255, 76, 76);
-
-	scroll-behavior: smooth;
 }
 
 * {
